# igv_ros2

./: .gitignore  IGV_WORKING_CONFIG.md  start_full_vision_stack.sh
rosbag2_2026_04_23-15_11_13/: metadata.yaml
src/differential_drive_robot_model/Differential_drive_robot-Model/: .gitignore  README.md
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_control/: CMakeLists.txt  package.xml
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_control/launch/: teleop.launch.py
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_control/nodes/: teleop.py
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_description/: CMakeLists.txt  package.xml
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_description/launch/: rviz_visualize.launch.py
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_description/rviz/: urdf.rviz
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_description/urdf/: differential_drive_robot.gazebo  differential_drive_robot.xacro  materials.xacro  xacro_variables.xacro
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_gazebo/: CMakeLists.txt  package.xml
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_gazebo/launch/: differential_drive_robot_gazebo.launch.py  differential_drive_robot_rviz_gazebo.launch.py  gazebo_visualize.launch.py  gazebo_world_visualize.launch.py
src/differential_drive_robot_model/Differential_drive_robot-Model/differential_drive_robot_gazebo/world/: world.world
src/igv_behavior/: package.xml  setup.cfg  setup.py
src/igv_behavior/igv_behavior/: behavior_manager.py
src/igv_bringup/: package.xml  setup.cfg  setup.py
src/igv_bringup/config/: obstacle_layer_params.yaml
src/igv_bringup/launch/: camera_only.launch.py  full_system.launch.py  lane_test.launch.py  obstacle_layer_view.launch.py  real_lane_test.launch.py  real_lane_test.launch.py.save
src/igv_bringup/rviz/: igv_default.rviz
src/igv_control/: package.xml  setup.cfg  setup.py
src/igv_control/igv_control/: cmd_vel_manager.py
src/igv_description/: package.xml  setup.cfg  setup.py
src/igv_description/urdf/: .igv.urdf.swp  igv.urdf  igv.urdf.save
src/igv_interfaces/: CMakeLists.txt  package.xml
src/igv_interfaces/msg/: BehaviorState.msg  LaneEstimate.msg  ObstacleSummary.msg
src/igv_localization/: package.xml  setup.cfg  setup.py
src/igv_localization/config/: odom_stub.yaml
src/igv_localization/igv_localization/: odom_stub.py
src/igv_perception/: package.xml  setup.cfg  setup.py
src/igv_perception/igv_perception/: .obstacle_detector_node.py.swp  cloud_debug_filter_node.py  obstacle_detector_node.py  segformer_lane_node.py  segformer_lane_node.py.save  segformer_lane_node_debug_backup.py
src/igv_tools/: package.xml  setup.cfg  setup.py
src/igv_tools/igv_tools/: fake_lane_publisher.py  fake_obstacle_publisher.py
