<?xml version="1.0"?>
<package format="3">
  <name>igv_perception</name>
  <version>0.0.0</version>
  <description>IGV perception package</description>
  <maintainer email="igv@todo.todo">igv</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>cv_bridge</depend>
  <depend>igv_interfaces</depend>
  <depend>ament_index_python</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
