<?xml version="1.0"?>
<package format="3">
  <name>igv_tools</name>
  <version>0.0.0</version>
  <description>IGV tools package</description>
  <maintainer email="igv@todo.todo">igv</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>igv_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
