<?xml version="1.0"?>
<package format="3">
  <name>differential_drive_robot_description</name>
  <version>0.0.0</version>
  <description>
    Robot description (URDF/xacro), RViz2 config, and URDF-only visualisation
    launch file for the differential-drive robot.
  </description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <!-- GUI slider for URDF-only (no Gazebo) inspection -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
